⛏️ FIX: Footer Social Icons sizing on smaller screens && Profile image rounding

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -119,7 +119,8 @@
 
 // Media Queries
 @media (max-width: 767px) {
-  .header .social a {
+  .header .social a,
+  .social a {
     font-size: 1.875rem; // 30px
   }
 
